--- a/_posts/2017-07-07-Book-List.md
+++ b/_posts/2017-07-07-Book-List.md
@@ -3,6 +3,7 @@ layout:         post
 title:          Book-list
 subtitle:       "书单"
 date:           2017-07-07 16:30
+update-date:	2017-09-08
 author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
 description:    A book list
@@ -14,20 +15,26 @@ tags:
 
 ---
 
-# Book List
+> 有时间更新，占个坑先
 
-## 物理学
-### 基本物理
-### 经典力学
-### 量子力学
-### 热力学与统计物理
-### 电动力学
-### 固体
+## 一、物理学
 
-## 经济学
+### 1.1 基本物理
 
-## 计算机
+### 1.2 经典力学
 
-### Python
+### 1.3 量子力学
 
-### Linux
+### 1.4 热力学与统计物理
+
+### 1.5 电动力学
+
+### 1.6 固体物理
+
+## 二、经济学
+
+## 三、计算机
+
+### 3.1 Python
+
+### 3.2 Linux
