add post: Linux Command

--- a/_posts/2017-07-02-README.md
+++ b/_posts/2017-07-02-README.md
@@ -8,7 +8,7 @@ author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
 description:    "Some Description"
 categories:     [Github-pages]
-tags:           [Github-pages,jekyll]
+tags:           [Github-pages,Jekyll]
 ---
 
 > 本博客主题 Fork 自[@Huxpro](//github.com/Huxpro/huxpro.github.io),感谢！
