--- a/_posts/2017-07-02-README.md
+++ b/_posts/2017-07-02-README.md
@@ -1,12 +1,13 @@
 ---
 layout:         post
 title:          "Quanyin Blog主题模板的使用说明"
-subtitle:       "Quanyin Blog主题模板的使用说明"
+subtitle:       "README"
 date:           2017-07-02 21:30
 lastmod:        2017-10-15 16:35
 author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
-description:    "Some Description"
+description:    "本博客的README"
+catalog:        true
 categories:     [Github-pages]
 tags:           [Github-pages,Jekyll]
 ---
