[Theme]:Fork and 增加双语支持;改善meta信息; [Self]:修改about; [Post]:更新book-list.

--- a/_posts/2017-07-07-Book-List.md
+++ b/_posts/2017-07-07-Book-List.md
@@ -3,7 +3,7 @@ layout:         post
 title:          Book-list
 subtitle:       "书单"
 date:           2017-07-07 16:30
-update-date:    2017-09-08
+update-date:    2017-12-1
 author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
 description:    A book list
@@ -17,30 +17,63 @@ tags:           [Study]
 
 ## 一、物理学
 
-### 1.1 基本物理
+### 1.1 基础物理
+- 郑永令,贾起民,力学
+- 赵凯华,热学
+- 赵凯华,钟锡华,光学
+- 郑永令,贾起民,电磁学
+- 哈立德,大学物理学
+- 费恩曼物理学讲义
 
 ### 1.2 经典力学
-- 梁昆淼,力学
+- 梁昆淼,力学(下册)
 
 ### 1.3 量子力学
-
+- Griffiths,Introduction to Quantum Mechanics
+- Sakurai,Modern Quantum Mechanics
 - 曾谨言,量子力学
 - 苏汝铿,量子力学
 
 ### 1.4 热力学与统计物理
-
 - 林宗涵,热力学与统计物理
+- 苏汝铿,统计物理学
+- P.K.Pathria, Statistical Mechancis
 
 ### 1.5 电动力学
+- Griffiths, Introduction to Electrodynamics
+- Jackson, Classical Electrodynamics
 
 ### 1.6 固体物理
-
 - 阎守胜,固体物理基础
 - 李正中,固体理论
+- Kittel,固体物理导论
+- 谢希德,固体能带理论
 
 
 ## 二、经济学
 
+### 2.1 经济学
+- 高鸿业,西方经济学(宏观经济学)
+- 高鸿业,西方经济学(微观经济学)
+- 尹伯成,西方经济学简明教程
+- 曼昆,经济学原理
+- 保罗·萨缪尔森,经济学
+- 约翰·穆勒,政治经济学原理
+- 梯若尔,产业组织理论
+- 保罗·海恩,经济学的思维方式
+- 克鲁格曼,国际经济学
+
+### 2.2 金融学
+- 米什金,货币金融学
+- 兹维·博迪,金融学 
+- 姜波克,国际金融学
+- 罗斯,公司理财
+- 博迪,投资学
+- 格雷厄姆,证券分析
+- 约翰·赫尓,期权、期货及其他衍生产品
+
+### 2.3 财政学
+- 哈维·罗森,特德·盖亚,财政学
 
 ## 三、计算机
 
@@ -63,11 +96,10 @@ tags:           [Study]
 - Matplotlib 用户指南
 - Python 科学计算
 
-
 #### 3.1.3 数据分析
 - Python 数据分析与挖掘实战
 - Python for Data Analysis(利用Python进行数据分析)
-- Machine Learning in Action
+- Machine Learning in Action(机器学习实战)
 
 #### 3.1.4 机器学习
 - 数学之美
@@ -88,5 +120,3 @@ tags:           [Study]
 - Git 简明指南
 - GIT CHEAT SHEET
 - ProGit
-
-
