[POST]:Add post:中文文案排版 [Other]:修改category

--- a/_posts/2017-07-02-README.md
+++ b/_posts/2017-07-02-README.md
@@ -8,7 +8,7 @@ author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
 description:    "本博客的README"
 catalog:        true
-categories:     [Github-pages]
+categories:     [笔记]
 tags:           [Github-pages,Jekyll]
 ---
 
