--- a/_posts/2017-07-07-Book-List.md
+++ b/_posts/2017-07-07-Book-List.md
@@ -8,7 +8,7 @@ author:         "Quanyin Tang"
 header-img:     "/Source/images/background/post-bg-default.jpg"
 description:    "A book list in Physics, Economics and Computer Science"
 catalog:        true
-categories:     [Study]
+categories:     [学习]
 tags:           [Study]
 
 ---
