--- a/_posts/2017-12-04-git-reset.md
+++ b/_posts/2017-12-04-git-reset.md
@@ -12,7 +12,7 @@ catalog:        true
 mathjax:        false
 lazyload:       true
 keyword:        Git,reset,撤销,
-categories:     [Git]
+categories:     [笔记]
 tags:           [Git]
 ---
 <!--
